--- a/challenge-oracle-decoder-esp-main/css/styles.css
+++ b/challenge-oracle-decoder-esp-main/css/styles.css
@@ -1,10 +1,10 @@
 * {
   margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+  padding: 0; 
 }
 
 body {
-  background-color: rgb(56, 25, 231);
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
+  background-color: rgb(11, 152, 187) !important;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;  
+  }
+
